fix(a11y): don't read invisible search cancel button

--- a/modules/directives/search/less/android/search.less
+++ b/modules/directives/search/less/android/search.less
@@ -48,11 +48,13 @@
     .transition(all 0.3s ease);
     position: absolute;
     right: -24px;
+    speak: none;
     pointer-events: none;
   }
   &.focus bp-button {
     -webkit-transform: translateX(0);
     .opacity(1);
+    speak: normal;
     pointer-events: auto;
   }
 }
