--- a/modules/directives/search/less/ios/search.less
+++ b/modules/directives/search/less/ios/search.less
@@ -49,12 +49,14 @@
     position: absolute;
     right: 5px;
     top: 6px;
+    speak: none;
     pointer-events: none;
   }
   &.focus bp-button {
     .transition(all 0.3s linear 0.02s);
     .transform(translateX(0));
     .opacity(1);
+    speak: normal;
     pointer-events: auto;
   }
 }
