--- a/modules/directives/search/less/ios7/search.less
+++ b/modules/directives/search/less/ios7/search.less
@@ -52,12 +52,14 @@
     position: absolute;
     right: 6px;
     pointer-events: none;
+    speak: none;
     padding: 0 6px;
   }
   &.focus bp-button {
     .transition(all 0.3s linear 0.02s);
     .transform(translateX(0));
     .opacity(1);
+    speak: normal;
     pointer-events: auto;
   }
 }
